--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" type="image/png" href="https://res.cloudinary.com/dvvhyfrjr/image/upload/v1758039018/dced_bdxlsb.png" />
 
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="theme-color" content="#000000" />
     <title>Veeranjaneyulu's Portfolio</title>
     <meta name="description" content="Portfolio" />
     <meta name="author" content="Veeranjaneyulu" />
