--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Veeranjaneyulu" />
 
     <meta property="og:title" content="Veeranjaneyulu's Portfolio" />
-    <meta property="og:description" content="Pprtfolio" />
+    <meta property="og:description" content="Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://res.cloudinary.com/dvvhyfrjr/image/upload/v1758039018/dced_bdxlsb.png" />
 
